--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.4)
 project(sviaz)
 add_subdirectory(formatter_lib)
 add_subdirectory(formatter_ex_lib)
+add_subdirectory(hello_world_application)
 add_subdirectory(solver_lib)
 add_subdirectory(solver_application)
    
