--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,6 @@ jobs:
       - name: opensolver
         run: |
           cd build/solver_application
-          ./solverexe 
-          2 2 2
+          ./solverexe 2 2 2
           
           
